# robots-thesis

./: README.md  TargetEPuck.cmake
Real_robot_tests/: automodegianduja_aggregation.xml  automodegianduja_decision.xml  automodegianduja_stop.xml
Robot-experiments/: Friedman-tasks.tex  aggreg-BOXplot.tex  automodegianduja_aggregation_visu.xml  automodegianduja_decision_visu.xml  automodegianduja_stop_visu.xml  decision-BOXplot.tex  decision-ECDFSim.tex  friedman.R  path_planning_dodecagonal_arena.argos  real-scores-aggregation.txt  real-scores-deci.txt  real-scores-stop.txt  scores-Aggregation.txt  scores-Decision Making.txt  scores-Decision making.txt  scores-Stop.txt  stop-BOXplot.tex  stop-ECDFSim.tex  testRew.R
scripts/: LaunchDesigns.py  bundle_argos3_epuck.sh  bundle_argos3_epuck_tam.sh  clusterrun.txt  convertvideos.py  epucks.json  evaluate.py  extractFSM.py  gen_dataframes.py  getresults.py  iracekenny.toml  kennylauncher.toml  makeupload.py  massupload.py  pack_article.py  plotres.py  runandplot.py  sshepucks.py  statistics.R
scripts/ExpGen/: ExpGen.py
scripts/allresults/: desinogian1304-results.txt
scripts/argos_launcher/: config.py  launchArgos.py
scripts/friedman/: DESCRIPTION
scripts/results/: scores-Stop.txt
scripts/results1X/: agg1.1-results.txt  agg1.2-results.txt  agg1.3-results.txt  (+10 more)
src/: CMakeLists.txt  automode_test2.argos  state-machine.txt
src/beacon_epuck/: CMakeLists.txt  epuck_beacon.cpp  epuck_beacon.h
src/test_lightsensors_epuck/: CMakeLists.txt  epuck_test_lightsensors.cpp  epuck_test_lightsensors.h  epuck_testlight.argos
(+998 files in other folders)
